--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script>
     // Mute the video to prevent autoplay issues
-    document.getElementById('music-video').muted = true;
+    document.getElementById('music-video').muted = false;
 
     // Function to unmute and autoplay the video
     function playVideo() {
