--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <video id="music-video" autoplay muted>
-    <source src="YOUR_GOOGLE_DRIVE_VIDEO_URL" type="video/mp4">
+    <source src="https://lesseraf.im/0:/BLACKPINK/BLACKPINK%20-%20As%20If%20Its%20Your%20Last%20%28Bugs%21%29.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
