--- a/index.html
+++ b/index.html
@@ -5,38 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music Video Player</title>
   <style>
-    body, html {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      height: 100vh; /* 100% viewport height */
       overflow: hidden;
+      background-color: #333; /* Greyish background color */
+      display: flex;
+      justify-content: center;
+      align-items: flex-start; /* Align items to the top */
     }
 
     #music-video {
-      width: 100%;
-      height: 100%;
+      width: 60%; /* 60% of the viewport width */
       object-fit: contain;
+      margin-top: 10%; /* 10% margin from the top */
     }
 
-    #mute-button {
+    .control-button {
       position: absolute;
-      top: 10px;
-      right: 10px;
       background-color: rgba(255, 255, 255, 0.7);
       border: none;
       border-radius: 5px;
       padding: 5px 10px;
       cursor: pointer;
     }
+
+    #mute-button {
+      top: 10px;
+      right: 10px;
+    }
+
+    #pause-button {
+      top: 10px;
+      left: 10px;
+    }
   </style>
 </head>
 <body>
   <video id="music-video" autoplay muted>
-    <source src="https://drive.google.com/uc?export=download&id=1If0hV2aDop9oRW5-lEt5IcFZVseSevGT" type="video/mp4">
+    <source src="https://lesseraf.im/0:/MAVE/MAVE%20-%20PANDORA%20%28Bugs%21%29.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <button id="mute-button">Mute</button>
+  <button id="mute-button" class="control-button">Mute</button>
+  <button id="pause-button" class="control-button">Pause</button>
 
   <script>
     // Function to toggle mute/unmute
@@ -51,13 +64,29 @@
       }
     }
 
-    // Add click event listener to the mute button
-    document.getElementById('mute-button').addEventListener('click', toggleMute);
+    // Function to pause/play the video
+    function togglePause() {
+      var video = document.getElementById('music-video');
+      if (video.paused) {
+        video.play(); // Play the video
+        document.getElementById('pause-button').textContent = 'Pause';
+      } else {
+        video.pause(); // Pause the video
+        document.getElementById('pause-button').textContent = 'Play';
+      }
+    }
 
-    // Automatically play the video when the page loads
+    // Add click event listeners to the mute and pause buttons
+    document.getElementById('mute-button').addEventListener('click', toggleMute);
+    document.getElementById('pause-button').addEventListener('click', togglePause);
+
+    // Check the initial muted state of the video and update the mute button text accordingly
     window.onload = function() {
       var video = document.getElementById('music-video');
-      video.play();
+      if (video.muted) {
+        document.getElementById('mute-button').textContent = 'Unmute';
+      }
+      video.play(); // Automatically play the video when the page loads
     };
   </script>
 </body>
