--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100vh; /* 100% viewport height */
       overflow: hidden;
-      background-color: #333; /* Greyish background color */
+      background-color: #222; /* Darker background color */
       display: flex;
       justify-content: center;
       align-items: flex-start; /* Align items to the top */
@@ -20,6 +20,7 @@
       width: 60%; /* 60% of the viewport width */
       object-fit: contain;
       margin-top: 10%; /* 10% margin from the top */
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Drop shadow */
     }
 
     .control-button {
