--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     #music-video {
       width: 60%; /* 60% of the viewport width */
       object-fit: contain;
+      margin-top: 200px; /* 200 pixels away from the top */
+      margin-bottom: auto; /* Push video to the middle */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Drop shadow */
     }
 
