--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
       background-color: #222; /* Darker background color */
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* Align items to the top */
+      align-items: center; /* Align items to the center */
     }
 
     #music-video {
       width: 60%; /* 60% of the viewport width */
       object-fit: contain;
-      margin-top: 200px; /* 200 pixels away from the top */
-      margin-bottom: auto; /* Push video to the middle */
+      margin-bottom: 50px; /* 50 pixels away from the bottom */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Drop shadow */
     }
 
