--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <video id="music-video" autoplay muted>
-    <source src="https://lesseraf.im/0:/MAVE/MAVE%20-%20PANDORA%20%28Bugs%21%29.mp4" type="video/mp4">
+    <source src="https://gd.haydenvhs.workers.dev/download.aspx?file=duOLh3tBjpv9ECUcCR9K1kRVe17zLXHyYrfKwO6IXxSfOi4wBqk5J%2B1KDTMEBjSz&expiry=vwpJXGBMrmoDNwcU1NNAcg%3D%3D&mac=11068d607bc3182c95bf4a5dcd44d9debd56ef3849dcee9d5d46a23b105a934b" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
