--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100vh; /* 100% viewport height */
       overflow: hidden;
-      background-color: #222; /* Darker background color */
+      background: linear-gradient(to bottom, #1a1a1a, #000000); /* Black to dark gray gradient */
       display: flex;
       justify-content: center;
       align-items: center; /* Align items to the center */
