--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 10px;
+      padding: 5px;
       opacity: 0;
       transition: opacity 0.3s ease;
     }
@@ -50,8 +50,13 @@
       border: none;
       cursor: pointer;
       outline: none;
-      margin: 0 10px;
+      margin: 0 5px;
       transition: transform 0.2s ease;
+    }
+
+    .control-button img {
+      width: 20px;
+      height: 20px;
     }
 
     .control-button:hover {
