--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
     #music-player {
       position: relative;
       width: 75%; /* 75% of the viewport width */
+      height: 75vh; /* 75% of the viewport height */
+      display: flex;
+      justify-content: center;
+      align-items: center; /* Align items to the center */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Drop shadow */
     }
 
     #music-video {
-      width: 115%; /* 15% bigger than the parent container */
+      width: 100%;
       height: auto;
       cursor: pointer;
     }
@@ -34,7 +38,7 @@
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       padding: 5px;
       opacity: 0;
@@ -71,11 +75,11 @@
       Your browser does not support the video tag.
     </video>
     <div class="player-controls">
-      <button id="mute-button" class="control-button">
-        <img src="https://img.icons8.com/sf-black-filled/64/FFFFFF/sound-speaker.png"/>
-      </button>
       <button id="pause-button" class="control-button">
         <img src="https://img.icons8.com/sf-black-filled/64/FFFFFF/pause.png"/>
+      </button>
+      <button id="mute-button" class="control-button">
+        <img src="https://img.icons8.com/sf-black-filled/64/FFFFFF/sound-speaker.png"/>
       </button>
     </div>
   </div>
