--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Video Player</title>
+  <title>SZA - Kill Bill</title>
   <style>
     body {
       margin: 0;
@@ -31,6 +31,18 @@
       height: 100%;
       cursor: pointer;
     }
+
+    #title {
+      position: absolute;
+      top: 20px;
+      font-family: 'SF Pro Display', sans-serif;
+      font-size: 32px;
+      color: transparent;
+      background: linear-gradient(to right, #ff416c, #ff4b2b); /* Gradient based on SZA's "Kill Bill" MV */
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -39,6 +51,7 @@
       <source src="https://gd.haydenvhs.workers.dev/download.aspx?file=duOLh3tBjpv9ECUcCR9K1kRVe17zLXHyYrfKwO6IXxSfOi4wBqk5J%2B1KDTMEBjSz&expiry=vwpJXGBMrmoDNwcU1NNAcg%3D%3D&mac=11068d607bc3182c95bf4a5dcd44d9debd56ef3849dcee9d5d46a23b105a934b" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+    <div id="title">SZA - Kill Bill</div>
   </div>
 </body>
 </html>
