--- a/index.html
+++ b/index.html
@@ -47,11 +47,35 @@
 </head>
 <body>
   <div id="music-player">
-    <video id="music-video" muted>
+    <video id="music-video" autoplay muted>
       <source src="https://gd.haydenvhs.workers.dev/download.aspx?file=duOLh3tBjpv9ECUcCR9K1kRVe17zLXHyYrfKwO6IXxSfOi4wBqk5J%2B1KDTMEBjSz&expiry=vwpJXGBMrmoDNwcU1NNAcg%3D%3D&mac=11068d607bc3182c95bf4a5dcd44d9debd56ef3849dcee9d5d46a23b105a934b" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div id="title">SZA - Kill Bill</div>
   </div>
+
+  <script>
+    const musicVideo = document.getElementById('music-video');
+
+    // Function to toggle play/pause
+    function togglePlayPause() {
+      if (musicVideo.paused) {
+        musicVideo.play();
+      } else {
+        musicVideo.pause();
+      }
+    }
+
+    // Function to unmute video
+    function unmuteVideo() {
+      musicVideo.muted = false;
+    }
+
+    // Add event listener to video for play/pause toggle
+    musicVideo.addEventListener('click', () => {
+      togglePlayPause();
+      unmuteVideo();
+    });
+  </script>
 </body>
 </html>
