--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     #music-player {
       position: relative;
       width: 75%; /* 75% of the viewport width */
-      height: 75vh; /* 75% of the viewport height */
+      height: 31.25vw; /* 2.40:1 aspect ratio */
+      max-height: 75vh; /* Limit height to viewport height */
       display: flex;
       justify-content: center;
       align-items: center; /* Align items to the center */
