--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
     }
 
     #music-player {
-      position: relative;
-      width: 75%; /* 75% of the viewport width */
-      height: 31.25vw; /* 2.40:1 aspect ratio */
-      max-height: 75vh; /* Limit height to viewport height */
-      display: flex;
-      justify-content: center;
-      align-items: center; /* Align items to the center */
+      width: 70vw; /* 70% of the viewport width */
+      height: 70vh; /* 70% of the viewport height */
+      max-width: 100%;
+      max-height: 100%;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Drop shadow */
     }
 
