--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       max-width: 100%;
       max-height: 100%;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Drop shadow */
+      position: relative;
     }
 
     #music-video {
@@ -33,10 +34,10 @@
 </head>
 <body>
   <div id="music-player">
-    <video id="music-video" autoplay muted>
+    <video id="music-video" autoplay>
       <source src="https://gd.haydenvhs.workers.dev/download.aspx?file=duOLh3tBjpv9ECUcCR9K1kRVe17zLXHyYrfKwO6IXxSfOi4wBqk5J%2B1KDTMEBjSz&expiry=vwpJXGBMrmoDNwcU1NNAcg%3D%3D&mac=11068d607bc3182c95bf4a5dcd44d9debd56ef3849dcee9d5d46a23b105a934b" type="video/mp4">
       Your browser does not support the video tag.
-    </video>
+    </video>>
   </div>
 </body>
 </html>
